Revision history for POE-Quickie

{{$NEXT}}

0.04  Sat Jun 26 05:48:13 GMT 2010
    - Don't require server to be specified in a network hash if a default
      one is specified

0.03  Sat Jun 26 04:44:32 GMT 2010
    - Only parse plugin options when not using a config file
    - Set our process name to 'pocoirc'

0.02  Fri Jun 25 20:26:42 GMT 2010
    - Support JSON config files too, not just YAML
    - Add some example output to the documentation

0.01  Fri Jun 25 19:47:14 GMT 2010
    - Initial release